fixed the ui of model details page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #0A161C;
+  background-color: #121216;
   color: #fff;
   margin: 12px;
   font-family: 'Nunito', sans-serif;
