--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -9,18 +9,18 @@
     transform: translateX(-50%);
 }
 
-#md-hero-wrap {
+.heroWrap {
     justify-content: center;
     width: 100%;
-    height: 27rem;
+    height: auto;
     margin-left: 50%;
     transform: translateX(-50%);
     border: 1px solid #FFFFFF29;
     border-radius: 48px;
-    background: linear-gradient(#FFFFFF24, #FFFFFF00);
+    background-color: rgba(27, 27, 27, 0.38);
     display: flex;
     align-items: center;
-    padding: 0 5rem;
+    padding: 2rem 5rem;
     gap: 3rem;
     position: relative;
     box-shadow: 0px 4px 37px 0px #000000;
@@ -97,6 +97,41 @@
     font-size: 16px;
     line-height: 137%;
     letter-spacing: -3%;
+}
+
+.relatedModels {
+    width: 100%;
+    height: 30rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.modelsGrid {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 55%;
+}
+
+.modelCard {
+    width: 80px;
+    height: 80px;
+    background-color: rgba(27, 27, 27, 0.38);
+    border-radius: 20px;
+    border: 0.21px solid #FFFFFF29;
+    object-fit: cover;
+    text-align: center;
 }
 
 /* Responsive styles */
