--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -118,9 +118,9 @@
 }
 
 .modelsGrid {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1rem;
     width: 55%;
 }
 
@@ -136,7 +136,7 @@
 
 /* Responsive styles */
 @media (max-width: 480px) {
-    #md-hero-wrap {
+    .heroWrap {
         width: 100%;
         min-height: 20rem;
         height: auto;
@@ -166,22 +166,153 @@
         justify-content: center;
         gap: 1rem;
     }
+
+    .relatedModels {
+        height: 30rem;
+    }
+
+    .cards {
+        height: 100%;
+        justify-content: space-evenly;
+    }
+
+    .modelCard img {
+        width: 100px !important;
+        height: 100px !important;
+    }
+
+    .modelCard {
+        width: 100px;
+        height: 100px;
+        border-radius: 24px;
+    }
+
+    .modelsGrid {
+        width: 100%;
+        height: 75%;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        justify-items: center;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 481px) {
-    #md-hero-wrap {
+.heroWrap {
         width: 100%;
-        min-height: 25rem;
+        min-height: 20rem;
         height: auto;
-        border-radius: 36px;
+        border-radius: 25px;
         flex-direction: column-reverse;
-        padding: 1.5rem 2rem;
-        gap: 2.5rem;
+        padding: 1rem 1rem;
+        gap: 3rem;
     }
 
     #md-hero {
-        width: 14rem;
-        height: 14rem;
-        border-radius: 48px;
+        width: 12rem;
+        height: 12rem;
+        border-radius: 25px;
+    }
+
+    .wrapper {
+        min-height: 20rem;
+        height: auto;
+        width: 100%;
+    }
+
+    .descriptionAndCategory {
+        width: 100%;
+        min-height: 5rem;
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .relatedModels {
+        height: 30rem;
+    }
+
+    .cards {
+        height: 100%;
+        justify-content: space-evenly;
+    }
+
+    .modelCard img {
+        width: 100px !important;
+        height: 100px !important;
+    }
+
+    .modelCard {
+        width: 100px;
+        height: 100px;
+        border-radius: 24px;
+    }
+
+    .modelsGrid {
+        width: 100%;
+        height: 75%;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        justify-items: center;
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 769px) {
+    .wrapper {
+        width: 80%;
+        height: 70rem;
+    }
+
+    .heroWrap {
+        width: 100%;
+        min-height: 20rem;
+        height: auto;
+        border-radius: 25px;
+        flex-direction: column-reverse;
+        padding: 1rem 1rem;
+        gap: 3rem;
+    }
+
+    #md-hero {
+        width: 12rem;
+        height: 12rem;
+        border-radius: 25px;
+    }
+
+    .descriptionAndCategory {
+        width: 100%;
+        min-height: 5rem;
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .relatedModels {
+        height: 10rem;
+    }
+
+    .cards {
+        height: 100%;
+        justify-content: space-evenly;
+    }
+
+    .modelCard img {
+        width: 80px !important;
+        height: 80px !important;
+    }
+
+    .modelCard {
+        width: 80px;
+        height: 80px;
+        border-radius: 24px;
+    }
+
+    .modelsGrid {
+        width: 75%;
+        height: 75%;
+        grid-template-columns: repeat(5, 1fr);
+        align-items: center;
+        justify-items: center;
     }
 }
