--- a/src/app/components/header.css
+++ b/src/app/components/header.css
@@ -69,7 +69,7 @@ body {
 
 @media (max-width: 768px) and (min-width: 481px) {
     .header {
-        height: 20rem;
+        height: 16rem;
     }
 
     .cloud1,
@@ -79,6 +79,7 @@ body {
 
     .header-image {
         width: 30rem;
+        top: -20%;
     }
 }
 
