--- a/src/app/components/models_grid.css
+++ b/src/app/components/models_grid.css
@@ -214,6 +214,93 @@ body .model-card p,
     font-weight: 600;
 }
 
+.footer {
+    position: relative;
+    margin-bottom: 0;
+    width: 100%;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    /* background-color: rebeccapurple; */
+}
+
+.earth_2 {
+    position: absolute;
+    z-index: 100;
+    background: url(../images/earth_2.png) bottom / cover no-repeat;
+    background-blend-mode: multiply;
+    filter: drop-shadow(0 0 15rem #4384D852);
+    background-size: 65rem 17rem;
+    width: 100%;
+    height: 100%;
+}
+
+.boat {
+    position: absolute;
+    bottom: 43.5%;
+    width: 50px;
+    height: 50px;
+}
+
+.travel_animator {
+    position: absolute;
+    color: #0E86FF;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.travel_animator img {
+    object-fit: cover;
+}
+
+.sub-heading {
+    position: absolute;
+    left: 12rem;
+    transform: rotate(-2deg);
+    bottom: 20.625rem;
+    width: 21rem;
+    height: 12rem;
+    background: url(../images/sub_heading_text.svg) center / cover no-repeat;
+    background-blend-mode: multiply;
+    background-size: 21rem 12rem;
+}
+
+.privacy-section {
+    position: absolute;
+    bottom: 100px;
+    width: 430px;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000000;
+}
+
+.privacy-policy {
+    height: 100%;
+    background: black;
+    color: white;
+    opacity: 51%;
+    backdrop-filter: blur(40.1px);
+    -webkit-backdrop-filter: blur(8px);
+    border-radius: 24px;
+    padding: 8px 20px;
+    font-weight: 500;
+    font-style: Medium;
+    font-size: 14px;
+    letter-spacing: -3%;
+}
+
+.copyright-section {
+    position: absolute;
+    bottom: 30px;
+    z-index: 1000000;
+}
+
 /* Responsive styles */
 @media (max-width: 480px) {
     .models-grid {
@@ -245,6 +332,91 @@ body .model-card p,
     .expand-button {
         width: 100%;
     }
+
+        .footer {
+        overflow: hidden;
+        height: 20rem;
+    }
+
+    .sub-heading-text {
+        width: 15rem;
+    }
+
+    .earth_2 {
+        position: absolute;
+        bottom: -15rem;
+        z-index: 100;
+        width: 130%;
+        height: 50%;
+        filter: drop-shadow(0 0 100px #4384D852);
+        background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-size: 25rem;
+        width: 100%;
+        height: 126%;
+    }
+
+    .boat {
+        bottom: 49.5%;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 50px;
+        width: 105%;
+        bottom: 12rem;
+        transform: rotate(1deg);
+    }
+
+    .travel_animator img {
+        width: 105%;
+        object-fit: contain;
+    }
+
+    .sub-heading {
+        position: absolute;
+        left: -22px;
+        transform: rotate(-8deg);
+        bottom: 10.625rem;
+        width: 12rem;
+        height: 12rem;
+        background: url(../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 9rem 12rem;
+    }
+
+    .privacy-section {
+        position: absolute;
+        bottom: 55px;
+        width: 320px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy-policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 6px 8px;
+        font-weight: 400;
+        font-style: Medium;
+        font-size: 12px;
+        letter-spacing: -3%;
+    }
+
+    .copyright-section {
+        position: absolute;
+        bottom: 8px;
+        z-index: 1000000;
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 481px) {
@@ -269,6 +441,87 @@ body .model-card p,
     .expand-button {
         width: 100%;
     }
+
+        .footer {
+        overflow: hidden;
+        height: 25rem;
+    }
+
+    .sub-heading-text {
+        width: 20rem;
+    }
+
+    .earth_2 {
+        width: 100%;
+        height: 120%;
+        filter: drop-shadow(0 0 6rem #4384D852);
+        background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 30rem;
+        bottom: -20rem;
+    }
+
+    .boat {
+        bottom: 39.5%;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 60px;
+        width: 105%;
+        bottom: 11rem;
+    }
+
+    .travel_animator img {
+        width: 105%;
+        object-fit: contain;
+    }
+
+    .sub-heading {
+        position: absolute;
+        left: -0.4375rem;
+        transform: rotate(-9deg);
+        bottom: 10.3125rem;
+        width: 13rem;
+        height: 13rem;
+        background: url(../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 12rem 11rem;
+    }
+
+    .privacy-section {
+        position: absolute;
+        bottom: 80px;
+        width: 400px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy-policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 8px 18px;
+        font-weight: 500;
+        font-style: Medium;
+        font-size: 13px;
+        letter-spacing: -3%;
+    }
+
+    .copyright-section {
+        position: absolute;
+        bottom: 15px;
+        z-index: 1000000;
+        font-size: 13px;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 1080px) {
@@ -292,5 +545,85 @@ body .model-card p,
 
     .expand-button {
         width: 100%;
+    }
+
+    .footer {
+        /* top: 440vh; */
+        height: 600px;
+        overflow: hidden;
+    }
+
+    .earth_2 {
+        width: 100%;
+        height: 140%;
+        filter: drop-shadow(0 0 6rem #4384D852);
+        background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 52rem;
+        bottom: -34rem;
+    }
+
+    .boat {
+        bottom: 47.5%;
+        width: 60px;
+        height: 60px;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 70px;
+        width: 105%;
+        bottom: 300px;
+    }
+
+    .travel_animator img {
+        width: 104%;
+        object-fit: contain;
+    }
+
+    .sub-heading {
+        position: absolute;
+        left: -0.4375rem;
+        transform: rotate(-8deg);
+        bottom: 17.3125rem;
+        width: 21rem;
+        height: 21rem;
+        background: url(../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 19rem 19rem;
+    }
+
+    .privacy-section {
+        position: absolute;
+        bottom: 100px;
+        width: 480px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy-policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 10px 22px;
+        font-weight: 500;
+        font-style: Medium;
+        font-size: 15px;
+        letter-spacing: -3%;
+    }
+
+    .copyright-section {
+        position: absolute;
+        bottom: 20px;
+        z-index: 1000000;
+        font-size: 20px;
     }
 }
