--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -8,7 +8,7 @@
 }
 
 .wrapper {
-    width: 95%;
+    width: 85%;
     height: 28rem;
     display: flex;
     flex-direction: column;
@@ -57,6 +57,11 @@
     text-align: start;
 }
 
+.heroWrap img {
+    width: 28rem !important;
+    height: 28rem !important;
+}
+
 .modelsTitle {
     color: #fff !important;
     font-size: 1.8rem;
@@ -86,12 +91,13 @@
     align-items: center;
     gap: 1rem;
     margin-bottom: 16px;
-    font-family: "'Nunito', sans-serif";
+    /* font-family: "'Nunito', sans-serif"; */
     font-weight: 700;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
     opacity: 0.9;
+    padding-left: 6px;
 }
 
 .backLink:hover {
@@ -99,11 +105,9 @@
 }
 
 .categoryInfo {
-    opacity: 0.9;
-    line-height: 1.6;
-    margin-top: 1rem;
-    font-family: "'Nunito', sans-serif";
+    /* font-family: Nunito; */
     font-weight: 800;
+    font-style: ExtraBold;
     font-size: 16px;
     line-height: 137%;
     letter-spacing: -3%;
@@ -143,6 +147,94 @@
     border: 0.21px solid #FFFFFF29;
     object-fit: cover;
     text-align: center;
+}
+
+.footer {
+    position: relative;
+    margin-bottom: 0;
+    width: 100%;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    margin-top:20rem;
+    /* background-color: rebeccapurple; */
+}
+
+.earth_2 {
+    position: absolute;
+    z-index: 100;
+    background: url(../../images/earth_2.png) bottom / cover no-repeat;
+    background-blend-mode: multiply;
+    filter: drop-shadow(0 0 15rem #4384D852);
+    background-size: 65rem 17rem;
+    width: 100%;
+    height: 100%;
+}
+
+.boat {
+    position: absolute;
+    bottom: 43.5%;
+    width: 50px;
+    height: 50px;
+}
+
+.travel_animator {
+    position: absolute;
+    color: #0E86FF;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.travel_animator img {
+    object-fit: cover;
+}
+
+.sub_heading {
+    position: absolute;
+    left: 12rem;
+    transform: rotate(-2deg);
+    bottom: 20.625rem;
+    width: 21rem;
+    height: 12rem;
+    background: url(../../images/sub_heading_text.svg) center / cover no-repeat;
+    background-blend-mode: multiply;
+    background-size: 21rem 12rem;
+}
+
+.privacy_section {
+    position: absolute;
+    bottom: 100px;
+    width: 430px;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000000;
+}
+
+.privacy_policy {
+    height: 100%;
+    background: black;
+    color: white;
+    opacity: 51%;
+    backdrop-filter: blur(40.1px);
+    -webkit-backdrop-filter: blur(8px);
+    border-radius: 24px;
+    padding: 8px 20px;
+    font-weight: 500;
+    font-style: Medium;
+    font-size: 14px;
+    letter-spacing: -3%;
+}
+
+.copyright_section {
+    position: absolute;
+    bottom: 30px;
+    z-index: 1000000;
 }
 
 /* Responsive styles */
@@ -205,10 +297,95 @@
         align-items: center;
         justify-items: center;
     }
+
+    .footer {
+        overflow: hidden;
+        height: 20rem;
+    }
+
+    .sub_heading-text {
+        width: 15rem;
+    }
+
+    .earth_2 {
+        position: absolute;
+        bottom: -15rem;
+        z-index: 100;
+        width: 130%;
+        height: 50%;
+        /* filter: drop-shadow(0 0 100px #4384D852); */
+        background: url(../../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-size: 25rem;
+        width: 100%;
+        height: 126%;
+    }
+
+    .boat {
+        bottom: 49.5%;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 50px;
+        width: 105%;
+        bottom: 12rem;
+        transform: rotate(1deg);
+    }
+
+    .travel_animator img {
+        width: 105%;
+        object-fit: contain;
+    }
+
+    .sub_heading {
+        position: absolute;
+        left: -22px;
+        transform: rotate(-8deg);
+        bottom: 10.625rem;
+        width: 12rem;
+        height: 12rem;
+        background: url(../../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 9rem 12rem;
+    }
+
+    .privacy_section {
+        position: absolute;
+        bottom: 55px;
+        width: 320px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy_policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 6px 8px;
+        font-weight: 400;
+        font-style: Medium;
+        font-size: 12px;
+        letter-spacing: -3%;
+    }
+
+    .copyright_section {
+        position: absolute;
+        bottom: 8px;
+        z-index: 1000000;
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 481px) {
-.heroWrap {
+    .heroWrap {
         width: 100%;
         min-height: 20rem;
         height: auto;
@@ -265,6 +442,87 @@
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
         justify-items: center;
+    }
+
+    .footer {
+        overflow: hidden;
+        height: 25rem;
+    }
+
+    .sub_heading-text {
+        width: 20rem;
+    }
+
+    .earth_2 {
+        width: 100%;
+        height: 120%;
+        /* filter: drop-shadow(0 0 6rem #4384D852); */
+        background: url(../../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 30rem;
+        bottom: -20rem;
+    }
+
+    .boat {
+        bottom: 39.5%;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 60px;
+        width: 105%;
+        bottom: 11rem;
+    }
+
+    .travel_animator img {
+        width: 105%;
+        object-fit: contain;
+    }
+
+    .sub_heading {
+        position: absolute;
+        left: -0.4375rem;
+        transform: rotate(-9deg);
+        bottom: 10.3125rem;
+        width: 13rem;
+        height: 13rem;
+        background: url(../../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 12rem 11rem;
+    }
+
+    .privacy_section {
+        position: absolute;
+        bottom: 80px;
+        width: 400px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy_policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 8px 18px;
+        font-weight: 500;
+        font-style: Medium;
+        font-size: 13px;
+        letter-spacing: -3%;
+    }
+
+    .copyright_section {
+        position: absolute;
+        bottom: 15px;
+        z-index: 1000000;
+        font-size: 13px;
     }
 }
 
@@ -325,5 +583,85 @@
         grid-template-columns: repeat(5, 1fr);
         align-items: center;
         justify-items: center;
+    }
+
+        .footer {
+        /* top: 440vh; */
+        height: 600px;
+        overflow: hidden;
+    }
+
+    .earth_2 {
+        width: 100%;
+        height: 140%;
+        /* filter: drop-shadow(0 0 6rem #4384D852); */
+        background: url(../../images/earth_mobile_2.svg) bottom / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 52rem;
+        bottom: -34rem;
+    }
+
+    .boat {
+        bottom: 47.5%;
+        width: 60px;
+        height: 60px;
+    }
+
+    .travel_animator {
+        position: absolute;
+        color: #0E86FF;
+        height: 70px;
+        width: 105%;
+        bottom: 300px;
+    }
+
+    .travel_animator img {
+        width: 104%;
+        object-fit: contain;
+    }
+
+    .sub_heading {
+        position: absolute;
+        left: -0.4375rem;
+        transform: rotate(-8deg);
+        bottom: 17.3125rem;
+        width: 21rem;
+        height: 21rem;
+        background: url(../../images/sub_heading_text_blue.svg) center / cover no-repeat;
+        background-blend-mode: multiply;
+        background-size: 19rem 19rem;
+    }
+
+    .privacy_section {
+        position: absolute;
+        bottom: 100px;
+        width: 480px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000000;
+    }
+
+    .privacy_policy {
+        height: 100%;
+        background: black;
+        color: white;
+        opacity: 51%;
+        backdrop-filter: blur(40.1px);
+        -webkit-backdrop-filter: blur(8px);
+        border-radius: 24px;
+        padding: 10px 22px;
+        font-weight: 500;
+        font-style: Medium;
+        font-size: 15px;
+        letter-spacing: -3%;
+    }
+
+    .copyright_section {
+        position: absolute;
+        bottom: 20px;
+        z-index: 1000000;
+        font-size: 20px;
     }
 }
