--- a/src/app/components/models_grid.css
+++ b/src/app/components/models_grid.css
@@ -215,15 +215,16 @@ body .model-card p,
 }
 
 .footer {
-    position: relative;
-    margin-bottom: 0;
-    width: 100%;
-    height: 550px;
-    display: flex;
     flex-direction: column;
     align-items: center;
+    width: 1104.48px;
+    height: 550px;
+    margin-bottom: 0;
     padding: 30px;
-    /* background-color: rebeccapurple; */
+    display: flex;
+    position: relative;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 .earth_2 {
@@ -258,15 +259,14 @@ body .model-card p,
 }
 
 .sub-heading {
-    position: absolute;
-    left: 12rem;
-    transform: rotate(-2deg);
-    bottom: 20.625rem;
+    background-blend-mode: multiply;
+    background: url(../images/sub_heading_text.svg) center / 21rem 12rem no-repeat;
     width: 21rem;
     height: 12rem;
-    background: url(../images/sub_heading_text.svg) center / cover no-repeat;
-    background-blend-mode: multiply;
-    background-size: 21rem 12rem;
+    position: absolute;
+    bottom: 20.625rem;
+    left: 4rem;
+    transform: rotate(-2deg);
 }
 
 .privacy-section {
@@ -336,6 +336,7 @@ body .model-card p,
     .footer {
         overflow: hidden;
         height: 20rem;
+        width: 100%;
     }
 
     .sub-heading-text {
@@ -348,7 +349,7 @@ body .model-card p,
         z-index: 100;
         width: 130%;
         height: 50%;
-        /* filter: drop-shadow(0 0 100px #4384D852); */
+        filter: none;
         background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
         background-size: 25rem;
         width: 100%;
@@ -445,6 +446,7 @@ body .model-card p,
     .footer {
         overflow: hidden;
         height: 25rem;
+        width: 100%;
     }
 
     .sub-heading-text {
@@ -454,7 +456,7 @@ body .model-card p,
     .earth_2 {
         width: 100%;
         height: 120%;
-        /* filter: drop-shadow(0 0 6rem #4384D852); */
+        filter: none;
         background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
         background-blend-mode: multiply;
         background-size: 30rem;
@@ -551,12 +553,13 @@ body .model-card p,
         /* top: 440vh; */
         height: 600px;
         overflow: hidden;
+        width: 925.48px;
     }
 
     .earth_2 {
         width: 100%;
         height: 140%;
-        /* filter: drop-shadow(0 0 6rem #4384D852); */
+        filter: none;
         background: url(../images/earth_mobile_2.svg) bottom / cover no-repeat;
         background-blend-mode: multiply;
         background-size: 52rem;
