Changed the navbar according to the home page and redirect the user to home page when the logo or brand text is clicked on the nav bar

--- a/src/app/components/navbar.css
+++ b/src/app/components/navbar.css
@@ -49,7 +49,7 @@
 .menu a {
     text-decoration: none;
     color: white;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'SF Pro Rounded', sans-serif;
     font-weight: 800;
     font-style: Semibold;
     font-size: 14px;
