--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -96,17 +96,15 @@
     align-items: center;
     gap: 1rem;
     margin-bottom: 16px;
-    /* font-family: "'Nunito', sans-serif"; */
     font-weight: 700;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
-    opacity: 0.9;
     padding-left: 6px;
 }
 
 .backLink:hover {
-    opacity: 1;
+    text-decoration: underline;
 }
 
 .categoryInfo {
