--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -1,7 +1,3 @@
-html, body {
-    overflow-x: hidden;
-}
-
 .navbarWrapper {
     width: 100%;
     display: flex;
@@ -248,6 +244,12 @@ html, body {
 
 /* Responsive styles */
 @media (max-width: 480px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
     .heroWrap {
         width: 100%;
         min-height: 20rem;
@@ -400,6 +402,12 @@ html, body {
 }
 
 @media (max-width: 768px) and (min-width: 481px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
     .heroWrap {
         width: 100%;
         min-height: 20rem;
@@ -543,6 +551,12 @@ html, body {
 }
 
 @media (max-width: 1024px) and (min-width: 769px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
     .wrapper {
         width: 80%;
         height: 70rem;
