--- a/src/app/components/models_grid.css
+++ b/src/app/components/models_grid.css
@@ -112,7 +112,7 @@ h2.models-title {
 .model-card {
     text-align: center;
     text-decoration: none;
-    font-family: "SF Pro Rounded", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-weight: 500;
     font-style: Medium;
     font-size: 20px;
@@ -290,9 +290,10 @@ body .model-card p,
     border-radius: 24px;
     padding: 8px 20px;
     font-weight: 500;
-    font-style: Medium;
     font-size: 14px;
     letter-spacing: -3%;
+    display: flex;
+    align-items: center;
 }
 
 .copyright-section {
