--- a/src/app/components/models_grid.css
+++ b/src/app/components/models_grid.css
@@ -232,10 +232,10 @@ body .model-card p,
     z-index: 100;
     background: url(../images/earth_2.png) bottom / cover no-repeat;
     background-blend-mode: multiply;
-    filter: drop-shadow(0 0 15rem #4384D852);
     background-size: 65rem 17rem;
     width: 100%;
     height: 100%;
+    will-change: transform;
 }
 
 .boat {
