--- a/src/app/components/navbar.css
+++ b/src/app/components/navbar.css
@@ -4,7 +4,7 @@
 }
 
 .nav-bar {
-    width: 96%;
+    width: 93%;
     height: 3rem;
     padding: 2.5rem 0;
     display: flex;
@@ -38,12 +38,11 @@
 }
 
 .menu {
-    width: 57%;
+    width: 90%;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 10px;
+    justify-content: space-between;
     background-color: #FFFFFF14;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -52,6 +51,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-top: 0.8px solid white;
     border-bottom: 0.8px solid white;
+    padding: 0 45px;
 }
 
 .menu a {
@@ -79,7 +79,7 @@
     margin-right: 1rem;
 }
 
-.sign_in_button {
+/* .sign_in_button {
     height: 45px;
     width: 6rem;
     display: flex;
@@ -94,7 +94,7 @@
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
     font-size: 16px;
-}
+} */
 
 .mobile-menu {
     position: fixed;
@@ -121,7 +121,6 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
     z-index: 9999;
     opacity: 0;
     animation: fadeIn 0.3s forwards;
@@ -184,9 +183,9 @@
         position: relative;
     }
 
-    .sign_in_button {
+    /* .sign_in_button {
         display: none;
-    }
+    } */
 
     .mobile-menu {
         width: 75%;
@@ -207,9 +206,9 @@
         position: relative;
     }
 
-    .sign_in_button {
+    /* .sign_in_button {
         display: none;
-    }
+    } */
 
     .mobile-menu {
         width: 70%;
@@ -230,9 +229,9 @@
         position: relative;
     }
 
-    .sign_in_button {
+    /* .sign_in_button {
         display: none;
-    }
+    } */
 
     .mobile-menu {
         width: 70%;
