Fixed the scroll jerking and mobile menu on the model details page

--- a/src/app/components/header.css
+++ b/src/app/components/header.css
@@ -53,6 +53,8 @@ body {
 
     .header {
         height: 15rem;
+        border-top-left-radius: 34px;
+        border-top-right-radius: 34px;
     }
 
     .cloud1,
