--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=SF+Pro+Rounded:wght@300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   user-select: none;
@@ -7,14 +6,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #0A161C;
   color: #fff;
   margin: 12px;
+  margin-bottom: 0;
   font-family: 'Nunito', sans-serif;
-  overflow-x: hidden;
   max-width: 100vw;
   user-select: none;
   -webkit-font-smoothing: antialiased;
