--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=SF+Pro+Rounded:wght@300;400;500;600;700;800;900&display=swap');
+:root {
+  --background: #121216;
+  --foreground: #fff;
+  --gradient_1: #0089E4;
+  --gradient_2: #89DBFF;
+}
 
 * {
   user-select: none;
@@ -25,4 +30,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@media (max-width: 480px) {
+    html, body {
+      overflow-x: hidden;
+    }
+
+    body {
+      margin: 6px;
+      margin-bottom: 0;
+    }
 }
